[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cryptoswap"
version = "0.1.0.dev0"
description = "CLI multi-currency wallet with non-custodial swaps via THORChain"
requires-python = ">=3.12"
dependencies = ["niquests>=3", "cryptography>=43"]

[project.scripts]
cryptoswap = "cryptoswap.cli:main"

# Bitcoin support lives behind an extra. bitcoinlib is a pure-ish Python wallet
# library (HD, UTXO services, coin selection, tx + OP_RETURN, signing,
# broadcast) that installs on 3.14; compiled BDK does not.
[project.optional-dependencies]
btc = ["bitcoinlib>=0.7"]
eth = ["eth-account>=0.13", "eth-abi>=5"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.15", "bitcoinlib>=0.7", "eth-account>=0.13", "eth-abi>=5"]

[tool.hatch.build.targets.wheel]
packages = ["src/cryptoswap"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Network/integration tests are opt-in: run them with `pytest -m network`.
addopts = "-m 'not network'"
markers = ["network: hits live THORChain (opt-in; excluded by default)"]
