[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "swapsack"
dynamic = ["version"]
description = "CLI multi-currency hot wallet with non-custodial cross-chain swaps via THORChain"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Tobias Brox" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
# bitcoinlib/eth-account/eth-abi are required (not extras): a wallet is useless
# without its chain libraries, and `make install` should yield a working binary.
dependencies = [
  "niquests>=3",
  "cryptography>=43",
  "bitcoinlib>=0.7",
  "eth-account>=0.13",
  "eth-abi>=5",
  "tronpy>=0.5",
  "argcomplete>=3",  # shell tab-completion (register-python-argcomplete)
]

[project.scripts]
swapsack = "swapsack.cli:main"

[project.urls]
Repository = "https://github.com/tobixen/cryptoswap-wallet"
Issues = "https://github.com/tobixen/cryptoswap-wallet/issues"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.15", "pre-commit>=4"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/swapsack/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/swapsack"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Network/integration tests are opt-in: run them with `pytest -m network`.
addopts = "-m 'not network'"
markers = ["network: hits live THORChain (opt-in; excluded by default)"]
# Treat warnings as errors so deprecations/misconfig surface as failures rather
# than scroll by. Add a documented `ignore:...` entry here if an upstream dep
# forces an unavoidable one. (Network tests additionally tolerate GC-timed
# ResourceWarnings from pooled sockets — scoped in tests/conftest.py.)
filterwarnings = ["error"]
